--- a/cat.css
+++ b/cat.css
@@ -1,5 +1,38 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    align-items: center;
+html {
+   background-color: #2196F3;
+   font-family:Arial, Helvetica, sans-serif
 }
+
+body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    min-width: 640px;
+    width: 95%;
+}
+
+body > header > img {
+    display: block;
+    width: 100%;
+}
+
+body > header > nav.navi li {
+    width: 33.33%;
+}
+
+nav.navi li {
+    display: block;
+    float: left;
+}
+
+nav.navi a {
+    display: block;
+    text-align: center;
+    background-color: #1976D2;
+    font-size: 1.1em;
+    color: black;
+}
+
+nav.navi a:hover, 
+nav.navi a:active {
+    background-color: #BBDEFB;
