--- a/templates/cat.html
+++ b/templates/cat.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="static/catPicture.png" alt="cat" />
+        <img src="catPicture.png" alt="cat" />
 
         <nav class="navi">
             <ul>
