--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -3,20 +3,20 @@
 <head>
     <title>Cat Info</title>
     <meta charset="utf-8" />
-<link href="catReset.css" rel="stylesheet" />
-    <link href="cat.css" rel="stylesheet" />
+    <link href="static/catReset.css" rel="stylesheet" />
+    <link href="static/cat.css" rel="stylesheet" />
 
 </head>
 
 <body>
     <header>
-        <img src="catPicture.png" alt="cat" />
+        <img src="static/catPicture.png" alt="cat" />
 
         <nav class="navi">
             <ul>
-                <li><a href="cat.html">Home</a></li>
-                <li><a href="catInfo.html">Information</a></li>
-                <li><a href="catfaq.html">FAQs</a></li>
+                <li><a href="templates/cat.html">Home</a></li>
+                <li><a href="templates/catInfo.html">Information</a></li>
+                <li><a href="templates/catfaq.html">FAQs</a></li>
             </ul>
         </nav>
     </header>
