--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -3,8 +3,8 @@
 <head>
     <title>Cat Info</title>
     <meta charset="utf-8" />
-    <link href="static/catReset.css" rel="stylesheet" />
-    <link href="static/cat.css" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='catReset.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='cat.css') }}" rel="stylesheet" />
 
 </head>
 
@@ -14,9 +14,9 @@
 
         <nav class="navi">
             <ul>
-                <li><a href="templates/cat.html">Home</a></li>
-                <li><a href="templates/catInfo.html">Information</a></li>
-                <li><a href="templates/catfaq.html">FAQs</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
+                <li><a href="{{ url_for('info') }}">Information</a></li>
+                <li><a href="{{ url_for('faq') }}">FAQs</a></li>
             </ul>
         </nav>
     </header>
