--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <img src="static/catPicture.png" alt="cat" />
+        <a href="{{ url_for('home') }}"></a>
+            <img src="static/catPicture.png" alt="cat" />
+        </a>
 
         <nav class="navi">
             <ul>
