--- a/templates/cat.html
+++ b/templates/cat.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="{{ url_for('home') }}"></a>
+        <a href="{{ url_for('home') }}">
             <img src="static/catPicture.png" alt="cat" />
         </a>
 
