--- a/templates/cat.html
+++ b/templates/cat.html
@@ -10,9 +10,11 @@
 
 <body>
     <header>
-        <a href="{{ url_for('home') }}">
-            <img src="static/catPicture.png" alt="cat" />
-        </a>
+        <div class="catimg">
+            <a href="{{ url_for('home') }}">
+                <img src="static/catPicture.png" alt="cat" />
+            </a>
+        </div>
 
         <nav class="navi">
             <ul>
