--- a/templates/cat.html
+++ b/templates/cat.html
@@ -23,25 +23,35 @@
         </nav>
     </header>
 
+    <article>
+        <h2>Cat Fact Of The Day</h2>
+        <p id="cat-fact">please work this time</p>
 
-    <h2>Daily Cat Fact</h2>
-    <p id="cat-fact">please work this time</p>
+        <script>
+            async function getFact() {
+                try {
+                    const res = await fetch('/cat');
+                    const data = await res.json();
+                    document.getElementById('cat-fact').innerText = data.fact;
+                } catch (err) {
+                    console.error('Error getting daily cat fact:', err);
+                    document.getElementById('cat-fact').innerText = "Failed to load cat fact.";
+        }
+        }
+        
+        getFact();
+        </script>
 
-    <script>
-        async function getFact() {
-            try {
-                const res = await fetch('/cat');
-                const data = await res.json();
-                document.getElementById('cat-fact').innerText = data.fact;
-            } catch (err) {
-                console.error('Error getting daily cat fact:', err);
-                document.getElementById('cat-fact').innerText = "Failed to load cat fact.";
-      }
-    }
-    
-    getFact();
-    </script>
+        <h1>About The Site</h1>
 
+        <p><br />This website provides a detailed overview of domestic cats, and is a great resource 
+            for anyone working with cats or looking to adopt a cat. On the information page, you can 
+            find a very detailed explanation of how cats work, and why they behave the way that they 
+            do. Also, be sure to check out the FAQ page, as there are answers to many questions people 
+            have about cats.
+        </p>
+
+    </article>
 </body>
 
 </html>
