--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -9,25 +9,26 @@
 </head>
 
 <body>
-    <header>
-        <a href="{{ url_for('home') }}">
-            <img src="static/catPicture.png" alt="cat" />
-        </a>
+    <div class="catwrap">
+        <header>
+            <a href="{{ url_for('home') }}">
+                <img src="static/catPicture.png" alt="cat" />
+            </a>
 
-        <nav class="navi">
-            <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('info') }}">Information</a></li>
-                <li><a href="{{ url_for('faq') }}">FAQs</a></li>
-            </ul>
-        </nav>
-    </header>
+            <nav class="navi">
+                <ul>
+                    <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="{{ url_for('info') }}">Information</a></li>
+                    <li><a href="{{ url_for('faq') }}">FAQs</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <article>
+        <article>
 
-    </article>
+        </article>
 
-
+    </div>
 </body>
 
 </html>
