--- a/static/cat.css
+++ b/static/cat.css
@@ -14,6 +14,10 @@ body {
     width: 95%;
 }
 
+html, body {
+    height: 100%;
+}
+
 /* Style for large cat image at the top of page */
 a > img {
     display: block;
