--- a/templates/cat.html
+++ b/templates/cat.html
@@ -24,7 +24,7 @@
     </header>
 
     <article>
-        <h2>Cat Fact Of The Day</h2>
+        <h2><br />Cat Fact Of The Day</h2>
         <p id="cat-fact">please work this time</p>
 
         <script>
@@ -42,7 +42,7 @@
         getFact();
         </script>
 
-        <h1>About The Site</h1>
+        <h1><br />About The Site</h1>
 
         <p><br />This website provides a detailed overview of domestic cats, and is a great resource 
             for anyone working with cats or looking to adopt a cat. On the information page, you can 
@@ -52,7 +52,7 @@
         </p>
 
     </article>
-    
+
 </body>
 
 </html>
