--- a/templates/cat.html
+++ b/templates/cat.html
@@ -24,7 +24,7 @@
     </header>
 
     <article>
-        <h2>Cat Fact Of The Day</h2>
+        <h2>Cat Fact Of The Day<br /></h2>
         <p id="cat-fact">please work this time</p>
 
         <script>
