--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -24,6 +24,41 @@
     </header>
 
     <article>
+        <h1>History</h1>
+        <p><br />Humans begun to domesticate cats around 3,600 years ago in Egypt. This was due to cats
+        being a natural predator of rodents, which were known to plague farms. This benefitted humans, 
+        as the cats would hunt the rodents that attempted to eat up stored grain, but also benefitted 
+        the cats, as the grain would attract a constant source of food. Unlike the domestication of 
+        other animals, cats evolved alongside humans gradually, and were not bred for specific traits 
+        until very recently. Cats also rode on ships to help keep the grain safe from any rodents 
+        which attempted to illegaly stow away aboard the ship. In the modern day, the domesticated cat 
+        has many capabilities that it has gained through evolution, such as having nine lives, and a 
+        look-down shoot-down radar array in their nose section for ease of tracking prey.</p>
+
+        <h1><br />Traits And Specifications</h1>
+        <p><br />The modern domestic feline has evolved many tools and clever solutions to survive and 
+        even thrive. One of the more widely known of these tools is the electrical sound system that 
+        powers what we humans call 'purring'. This electrical system is powered by a perpetual motion 
+        machine that still confuses the best human researchers, and activates when the cat is happy. 
+        This serves to strenghten the bond with the human that the cat is interacting with, and assist 
+        the cat in gaining favors from the human. Another commonly known trait is the fact that cats 
+        have nine lives. Cats are known to be able to survive things that any other organism simply 
+        could not. The way in which cats are able to come back to life in perfect order is still 
+        unknown.</p>
+
+        <p>For hunting, cats have many useful tools as well. They use the AN/PVS-7 single tube 
+        binocular night vision device to see in the dark, which on top of having a silent running 
+        engine and paws that make minimal noise, help the cat to become an expert at hunting everything 
+        from rodents to things that they knock off the table. The most advanced part of a feline's 
+        hunting ability is the way in which they track prey. Most modern domesticated cats use a 
+        reduced-size version of the Westinghouse AN/AWG-10 pulse-doppler radar to track prey. This 
+        gives them an unprecedented advantage when hunting, as the radar utilizes the pulse-doppler 
+        effect to mitigate radar return from terrain, allowing them to effectively hunt small prey 
+        attempting to hide, and track the prey continuously until they are able to catch it.
+        </p>
+
+        <h1><br />Behaviors</h1>
+        <p><br /></p>
 
     </article>
 
