--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -46,7 +46,7 @@
         could not. The way in which cats are able to come back to life in perfect order is still 
         unknown.</p>
 
-        <p>For hunting, cats have many useful tools as well. They use the AN/PVS-7 single tube 
+        <p><br />For hunting, cats have many useful tools as well. They use the AN/PVS-7 single tube 
         binocular night vision device to see in the dark, which on top of having a silent running 
         engine and paws that make minimal noise, help the cat to become an expert at hunting everything 
         from rodents to things that they knock off the table. The most advanced part of a feline's 
@@ -58,7 +58,7 @@
         </p>
 
         <h1><br />Behaviors</h1>
-        <p><br /></p>
+        <p><br />They do not behave.</p>
 
     </article>
 
