--- a/static/cat.css
+++ b/static/cat.css
@@ -1,7 +1,8 @@
 /* Style for entire page */
 html {
    background-color: #1976D2;
-   font-family:Arial, Helvetica, sans-serif
+   font-family:Arial, Helvetica, sans-serif;
+   min-height: 100%;
 }
 
 /* Style for page body */
@@ -12,15 +13,12 @@ body {
     max-width: 960px;
     min-width: 640px;
     width: 95%;
+    min-height: 100vh;
 }
 
 article {
     padding: 15px 15px;
     clear: both;
-}
-
-html, body {
-    min-height: 100%;
 }
 
 /* Style for large cat image at the top of page */
