--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -54,11 +54,9 @@
         reduced-size version of the Westinghouse AN/AWG-10 pulse-doppler radar to track prey. This 
         gives them an unprecedented advantage when hunting, as the radar utilizes the pulse-doppler 
         effect to mitigate radar return from terrain, allowing them to effectively hunt small prey 
-        attempting to hide, and track the prey continuously until they are able to catch it.
-        </p>
-
-        <h1><br />Behaviors</h1>
-        <p><br />They do not behave.</p>
+        attempting to hide, and track the prey continuously until they are able to catch it. Cats can 
+        also connect to Wi-Fi via an internal antenna, and receive updated information from there 
+        through data link.</p>
 
     </article>
 
