--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -25,7 +25,11 @@
 
     <article>
         <h1>Frequently Asked Questions</h1>
-        
+        <p><br /><i>Why does my cat chirp when it sees birds?</i></p>
+        <p>It is known that cats make a sound that mimics the chirp of a bird whenever they are 
+        looking at a bird outside, and the reason that they do this is likely that they are excited, 
+        but wish to express it quietly, in a way that would not scare away their potential prey.</p>
+
     </article>
 
 </body>
