--- a/templates/catInfo.html
+++ b/templates/catInfo.html
@@ -48,10 +48,10 @@
 
         <p><br />For hunting, cats have many useful tools as well. They use the AN/PVS-7 single tube 
         binocular night vision device to see in the dark, which on top of having a silent running 
-        engine and paws that make minimal noise, help the cat to become an expert at hunting everything 
-        from rodents to things that they knock off the table. The most advanced part of a feline's 
-        hunting ability is the way in which they track prey. Most modern domesticated cats use a 
-        reduced-size version of the Westinghouse AN/AWG-10 pulse-doppler radar to track prey. This 
+        power source and paws that make minimal noise, help the cat to become an expert at hunting 
+        everything from rodents to things that they knock off the table. The most advanced part of a 
+        feline's hunting ability is the way in which they track prey. Most modern domesticated cats use 
+        a reduced-size version of the Westinghouse AN/AWG-10 pulse-doppler radar to track prey. This 
         gives them an unprecedented advantage when hunting, as the radar utilizes the pulse-doppler 
         effect to mitigate radar return from terrain, allowing them to effectively hunt small prey 
         attempting to hide, and track the prey continuously until they are able to catch it. Cats can 
