--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -25,10 +25,42 @@
 
     <article>
         <h1>Frequently Asked Questions</h1>
-        <p><br /><i>Why does my cat chirp when it sees birds?</i></p>
+        <p><br /><i><b>Why does the cat chirp when it sees birds?</b></i></p>
         <p>It is known that cats make a sound that mimics the chirp of a bird whenever they are 
         looking at a bird outside, and the reason that they do this is likely that they are excited, 
         but wish to express it quietly, in a way that would not scare away their potential prey.</p>
+
+        <p><br /><i><b>Why does the cat knock objects off of tall places, like a table?</b></i></p>
+        <p>As cats often find themselves wanting to watch and chase birds, they too know that birds 
+        fly. Cats are curious by nature, so they wonder how birds can fly. When cats knock something 
+        off of a table, they are conducting research on properties of aerodynamics and lift on the 
+        objects they knock off.</p>
+
+        <p><br /><i><b>Why do the cat's eyes glow in the dark?</b></i></p>
+        <p>The eyes of a cat appear to "glow" in low light conditions as a result of their night vision 
+        equipment. The equipment is generally very effective, but this comes at the cost of reflective 
+        properties. This has in fact caused some trouble for cats historically speaking. In the medieval 
+        times of Europe, some religious people believed that cats were evil. This was because their eyes 
+        shine in low light, and their iris is similar in appearance to that of a serpent (in 
+        Christianity, the serpent is viewed as an evil, deceiving creature). The Catholic church also 
+        taught that satan sometimes transformed into a cat. For these reasons, many innocent cats were 
+        burned alive prior to the 1800s, most especially black cats.</p>
+
+        <p><br /><i><b>Why does the cat sleep for so long?</b></i></p>
+        <p>To the unassuming onlooker, cats may look rather lazy, as they rarely exercise and sleep 
+        frequently. Cats sleep for most of the day because they have important duties to tend to in 
+        their dreams. It is not well known, but all species of cat, from the small housecat to the 
+        mighty Amur Tiger, have a signficant influence on our world through activities that happen in 
+        their dreams. More information is known on this subject, but it has not been approved for 
+        release to the public.</p>
+
+        <p><br /><i><b>Why are the cat's ears folded down?</b></i></p>
+        <div class="scottish">
+            <p class="text">You have adopted a Scottish Fold cat. Placeholder text begins here "
+            Jika kamu ketahuan GOONING dan panik, maka yg saat itu terlihat malu adalah anda. Tetap jika anda ketahuan GOONING dan tetap santai melanjutkan, maka yg akan terlihat malu adalah orang yg memergoki anda. Ini bukan hanya soal gooning, ini soal menunjukkan KETENANGAN dan mempertegas DOMINASI.#sikap"
+            </p>
+            <img src="static/scottishFold.jpg" class="image" alt="scottish fold">
+        </div>
 
     </article>
 
