--- a/static/cat.css
+++ b/static/cat.css
@@ -58,3 +58,23 @@ h1 {
 h2 {
     font-size: 1.2em;
 }
+
+.scottish {
+    display: flex;
+}
+
+text, image {
+    flex: 1;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 700px) {
+    .scottish {
+        flex-direction: column;
+    }
+}
