--- a/static/cat.css
+++ b/static/cat.css
@@ -67,6 +67,10 @@ text, image {
     flex: 1;
 }
 
+image > img {
+    object-fit: contain;
+}
+
 @media (max-width: 700px) {
     .scottish {
         flex-direction: column;
