--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -59,7 +59,9 @@
             <p class="text">You have adopted a Scottish Fold cat. Placeholder text begins here "
             Jika kamu ketahuan GOONING dan panik, maka yg saat itu terlihat malu adalah anda. Tetap jika anda ketahuan GOONING dan tetap santai melanjutkan, maka yg akan terlihat malu adalah orang yg memergoki anda. Ini bukan hanya soal gooning, ini soal menunjukkan KETENANGAN dan mempertegas DOMINASI.#sikap"
             </p>
-            <img src="static/scottishFold.jpg" class="image" alt="scottish fold">
+            <div class="image"></div>
+                <img src="static/scottishFold.jpg" alt="scottish fold">
+            </div>
         </div>
 
     </article>
