--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -56,8 +56,13 @@
 
         <p><br /><i><b>Why are the cat's ears folded down?</b></i></p>
         <div class="scottish">
-            <p class="text">You have adopted a Scottish Fold cat. Placeholder text begins here "
-            Jika kamu ketahuan GOONING dan panik, maka yg saat itu terlihat malu adalah anda. Tetap jika anda ketahuan GOONING dan tetap santai melanjutkan, maka yg akan terlihat malu adalah orang yg memergoki anda. Ini bukan hanya soal gooning, ini soal menunjukkan KETENANGAN dan mempertegas DOMINASI.#sikap"
+            <p class="text">You have found a Scottish Fold cat. These cats have folded ears because 
+            of a genetic mutation that causes this specific breed of cat to have several developmental 
+            differences from normal cats. The easiest to notice is by far the 'folded' ears, caused 
+            by a weak development of the cartilage in the ears. This breed of cat also can suffer from 
+            bone deformities during their developmental years, which has raised ethical concerns about 
+            whether these cats should continue to be bred or not. Despite this, due to their unique 
+            appearance, they are still greatly desired and very expensive.
             </p>
             <div class="image">
                 <img src="static/scottishFold.jpg" alt="scottish fold">
