--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -54,7 +54,7 @@
         their dreams. More information is known on this subject, but it has not been approved for 
         release to the public.</p>
 
-        <p><br /><i><b>Why are the cat's ears folded down?</b></i></p>
+        <p><br /><i><b>Why are the cat's ears folded down forwards?</b></i></p>
         <div class="scottish">
             <p class="text">You have found a Scottish Fold cat. These cats have folded ears because 
             of a genetic mutation that causes this specific breed of cat to have several developmental 
