--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -55,7 +55,7 @@
         release to the public.</p>
 
         <div class="scottish">
-            <p><br /><i><b>Why are the cat's ears folded down forwards?</b></i></p>
+            <p class="text"><br /><i><b>Why are the cat's ears folded down forwards?</b></i></p>
             <p class="text">You have found a Scottish Fold cat. These cats have folded ears because 
             of a genetic mutation that causes this specific breed of cat to have several developmental 
             differences from normal cats. The easiest to notice is by far the 'folded' ears, caused 
