--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -55,8 +55,8 @@
         release to the public.</p>
 
         <div class="scottish">
-            <p class="text"><br /><i><b>Why are the cat's ears folded down forwards?</b></i></p>
-            <p class="text">You have found a Scottish Fold cat. These cats have folded ears because 
+            <p class="text"><br /><i><b>Why are the cat's ears folded down forwards?</b></i>
+            You have found a Scottish Fold cat. These cats have folded ears because 
             of a genetic mutation that causes this specific breed of cat to have several developmental 
             differences from normal cats. The easiest to notice is by far the 'folded' ears, caused 
             by a weak development of the cartilage in the ears. This breed of cat also can suffer from 
