--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -69,6 +69,14 @@
             </div>
         </div>
 
+        <p><br /><i><b>Why are the cat's ears folded back?</b></i></p>
+        <p>Just as computers and cars have a certain amount of operational hours before maintenance or 
+        replacement of components is needed, so do cats. Their ears are an important part of their 
+        systems, so cats will sometimes put their ears in a sort of 'rest' position. This can also 
+        occur when a cat is being agressive, as it keeps these critical components safe should the cat 
+        need to defend itself.
+        </p>
+
     </article>
 
 </body>
