--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -77,6 +77,10 @@
         need to defend itself.
         </p>
 
+        <p><br /><i><b>Why is the cat screaming?</b></i></p>
+        <p>1. Why wouldn't the cat scream</p>
+        <p>2. If you were smart, you'd be doing the same thing</p>
+
     </article>
 
 </body>
