--- a/templates/catfaq.html
+++ b/templates/catfaq.html
@@ -58,7 +58,7 @@
         <div class="scottish">
             <p class="text">You have found a Scottish Fold cat. These cats have folded ears because 
             of a genetic mutation that causes this specific breed of cat to have several developmental 
-            differences from normal cats. The easiest to notice is by far the 'folded' ears, caused 
+            differences from other cat breeds. The easiest to notice is by far the 'folded' ears, caused 
             by a weak development of the cartilage in the ears. This breed of cat also can suffer from 
             bone deformities during their developmental years, which has raised ethical concerns about 
             whether these cats should continue to be bred or not. Despite this, due to their unique 
